<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/uuid"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/uuid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:text="@string/default_uuid"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:text="@string/scan_time"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/scanTime"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="5"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1"

            android:text="@string/sec"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:text="@string/scan_interval"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/scanInterval"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            android:text="@string/min"
            android:textSize="16sp" />

    </LinearLayout>

    <Switch
        android:id="@+id/beaconType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="21dp"
        android:text="@string/start_service" />


    <Switch
        android:id="@+id/service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="21dp"
        android:text="@string/start_service" />


</LinearLayout>
